--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
                 0%{height: 15px;}
                 100%{height: 20px;}
             }
-            body{
-                background-color: #F4F4F4;
+            #header{
+                
                 
             } 
