--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
                 0%{height: 15px;}
                 100%{height: 20px;}
             }
-            #header{
-                
+            .header2{
+                background-color: black;
                 
             } 
