--- a/style.css
+++ b/style.css
@@ -9,10 +9,47 @@
                 0%{height: 15px;}
                 100%{height: 20px;}
             }
+            #log_out_btn{
+                color: rgb(29, 161, 242);
+                font-weight: bold;
+                height: 30px;
+                width: 10%;
+                background-color: transparent;
+                border: solid 1px rgb(29, 161, 242);
+                border-radius: 400px;
+                
+            }
+            #log_out_btn:hover{
+                
+                animation: buttons;
+                animation-duration: 0.5s;
+                animation-fill-mode: forwards;
+            }
+            
+           
             .header2{
-                background-color: black;
+                background-color: white;
+                position: relative;
+                height: 50px;
+                width: 100%;
+                overflow: hidden;        
                 
             } 
+            #leu{
+                width: 50%;
+                height: 100%;
+                float: left;
+            }
+            
+            
+            #desn{
+                text-align: right;
+                padding: 10px;
+                width: 50%;
+                height: 100%;
+                float: right;
+            }
+            
             .button{
                
                 font-weight: bold;
