--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
 
-@keyframes buttons{
-                
+            @keyframes buttons{
                 100%{background-color: #c9eaff;
                 }
             }
-            @keyframes inputs{
-                
-                0%{height: 15px;}
-                100%{height: 20px;}
-            }
+            
+           
+            
             #log_out_btn{
                 color: rgb(29, 161, 242);
                 font-weight: bold;
@@ -29,25 +26,40 @@
            
             .header2{
                 background-color: white;
-                position: relative;
+                position: fixed;
                 height: 50px;
                 width: 100%;
-                overflow: hidden;        
+                overflow: hidden;    
+                border-bottom: 1px solid #eef;
+               background: linear-gradient(bottom, #eee  0%, #fff 10%);
+		background: -ms-linear-gradient(bottom, #eee  0%,#fff 10%);
+		background: -moz-linear-gradient(bottom, #eee  0%,#fff 10%);
+		background: -webkit-linear-gradient(bottom, #eee  0%, #fff 10%);
+                
                 
             } 
+            
             #leu{
+                   padding: 10px;
                 width: 50%;
                 height: 100%;
                 float: left;
             }
-            
-            
+          
             #desn{
+                   padding: 12px;
                 text-align: right;
                 padding: 10px;
                 width: 50%;
                 height: 100%;
                 float: right;
+            }
+            
+            input{
+                box-sizing: border-box;
+                font-size: 62.5%;
+                
+                
             }
             
             .button{
@@ -67,8 +79,10 @@
                 animation-duration: 0.5s;
                 animation-fill-mode: forwards;
             }
+            
             #login{
-                margin-top: 2vw;
+                margin-top: 1vw;
+                margin-right: -10vw;
                 display:block;
                 float: right;
                 width: 50%;
@@ -79,11 +93,38 @@
                 
             .width{
                 width: 50%;
-                margin-left: 3vw;
                 margin-top: 1vw;
                 text-align: center;
                 
+                
             }
+            
+            #leu-main{
+                margin-top: 70px;
+                margin-left: 5px;
+                float: left;
+                width: 33%;
+                border: 1px solid black;
+                height: 100vw;
+            }
+             #sredinski-main{
+                float: left;
+                margin-left: 5px;
+                width: 33%;
+                border: 1px solid black;
+                height: 100vw;
+                 margin-top: 70px;
+            }
+            #desn-main{
+                margin-top: 70px;
+                margin-left: 5px;
+              float: left;  
+              width: 33%;
+                border: 1px solid black;
+                height: 100vw;
+            }
+            
+           
             
             
             
