--- a/style.css
+++ b/style.css
@@ -3,8 +3,15 @@
                 100%{background-color: #c9eaff;
                 }
             }
+             @keyframes buttons-up{
+                100%{background-color: #006dbf;
+                     border-color: #006dbf;
+                }
+            }
             
-           
+            div{
+                    display: block;
+            }
             
             #log_out_btn{
                 color: rgb(29, 161, 242);
@@ -63,7 +70,7 @@
             }
             
             .button{
-               
+               cursor: pointer;
                 font-weight: bold;
                 color: rgb(29, 161, 242);
                 height: 30px;
@@ -79,6 +86,25 @@
                 animation-duration: 0.5s;
                 animation-fill-mode: forwards;
             }
+            .button-up{
+                cursor: pointer;
+                font-weight: bold;
+                color: white;
+                height: 30px;
+                width: 10%;
+                background-color: rgb(29, 161, 242);
+                border: solid 1px rgb(29, 161, 242);
+                border-radius: 400px;
+                
+            }
+            .button-up:hover{
+                animation: buttons-up;
+                animation-fill-mode: forwards;
+                animation-duration: 0.5s;
+                
+            }
+            
+            
             
             #login{
                 margin-top: 1vw;
@@ -90,7 +116,6 @@
                 
                 
             }
-                
             .width{
                 width: 50%;
                 margin-top: 1vw;
@@ -98,33 +123,67 @@
                 
                 
             }
+            html{
+                font-family: sans-serif;
+                -webkit-text-size-adjust: 100%;
+            }
             
             #leu-main{
-                margin-top: 70px;
+                overflow: hidden;
+                padding: 3vw;
+                padding-top: 2vw; 
+                text-align: right;
+                margin-top: 60px;
                 margin-left: 5px;
                 float: left;
                 width: 33%;
-                border: 1px solid black;
                 height: 100vw;
             }
-             #sredinski-main{
+            #sredinski-main{
+                padding-top: 2vw; 
+                overflow: hidden;
+                text-align: center;
                 float: left;
                 margin-left: 5px;
                 width: 33%;
-                border: 1px solid black;
                 height: 100vw;
-                 margin-top: 70px;
+                margin-top: 60px;
             }
             #desn-main{
-                margin-top: 70px;
+                overflow: hidden;
+                padding: 3vw;
+                padding-top: 2vw; 
+                text-align: left;
+                margin-top: 60px;
                 margin-left: 5px;
-              float: left;  
-              width: 33%;
-                border: 1px solid black;
+                float: left;  
+                width: 33%;
                 height: 100vw;
             }
             
-           
+            .tweet{
+                padding: 9px 12px;
+                border-bottom: 1px #e6ecf0 solid;
+                cursor: pointer;
+                width: 100%;
+                background-color: white;
+                min-height: 51px;
+                position: relative;
+                
+            }
+            .tweet:hover{
+                background-color: #f5f8fa;
+                transition: background .1s linear;
+                
+            }
+            
+            #leu-profile{
+                min-height: 10vw;
+                float: right;
+                text-align: center;
+                width: 40%;
+                background-color: #ffffff;
+            }
             
             
             
