--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@
                 float: left;
                 margin-left: 5px;
                 width: 37%;
-                height: 100vw;
+                height: 110%;
                 margin-top: 60px;
             }
             .tweet-btn{
